<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".FruitBeGone"
    tools:showIn="@layout/activity_main">


    <TextView
        android:id="@+id/textViewapple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apple"
        android:onClick="make_gone"
        android:layout_marginLeft="@dimen/fruit_margin"
        android:layout_marginTop="@dimen/fruit_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
    />

    <TextView
        android:id="@+id/textViewbanana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bananna"
        android:onClick="make_gone"
        android:layout_marginLeft="@dimen/fruit_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewapple"
    />

    <TextView
        android:id="@+id/textViewgrape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grape"
        android:onClick="make_gone"
        android:layout_marginRight="@dimen/fruit_margin"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewapple"
    />

    <TextView
        android:id="@+id/textViewlettuce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lettuce"
        android:onClick="make_gone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
    />

    <TextView
        android:id="@+id/textViewwatermelon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/watermelon"
        android:onClick="make_gone"
        android:layout_marginBottom="@dimen/fruit_margin"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/viewlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_list"
        android:onClick="show_order"
        android:layout_marginBottom="@dimen/fruit_margin"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</android.support.constraint.ConstraintLayout>